--- a/src/Layout/_AppLayout.css
+++ b/src/Layout/_AppLayout.css
@@ -22,9 +22,9 @@
 
 /* Helpers */
 .trigger {
-  padding: 0 24px;
-  font-size: 18px;
-  line-height: 64px;
+  padding: 0 2.4rem;
+  font-size: 1.8rem;
+  line-height: 6.4rem;
   cursor: pointer;
   transition: color 0.3s;
 }
